RESOLVED FIXED31384
Missing ENABLE(INSPECTOR) guard
https://bugs.webkit.org/show_bug.cgi?id=31384
Summary Missing ENABLE(INSPECTOR) guard
Ben Murdoch
Reported 2009-11-11 16:11:18 PST
The #include "JSInspectorBackend.h" in bindings/js/ScriptObject.cpp should be guarded.
Attachments
Patch. (1.11 KB, patch)
2009-11-11 16:22 PST, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2009-11-11 16:22:03 PST
WebKit Commit Bot
Comment 2 2009-11-11 16:39:38 PST
Comment on attachment 43018 [details] Patch. Clearing flags on attachment: 43018 Committed r50848: <http://trac.webkit.org/changeset/50848>
WebKit Commit Bot
Comment 3 2009-11-11 16:39:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.