2009-11-11  Ben Murdoch  <benm@google.com>

Reviewed by Darin Adler.

        bindings/js/ScriptObject.cpp is missing and ENABLE(INSPECTOR) guard.
        https://bugs.webkit.org/show_bug.cgi?id=31384

        No functionality change so no tests required.

        * bindings/js/ScriptObject.cpp: Add ENABLE(INSPECTOR) guard around the JSInspectorBackend.h include.

git-svn-id: svn://svn.chromium.org/blink/trunk@50848 bbb929c8-8fbe-4397-9dbb-9b2b20218538