third_party/WebKit/WebCore/bindings/js/ScriptObject.cpp
@@ -33,9 +33,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ScriptObject.h"
 
 #include "JSDOMBinding.h"
-#include "JSInspectorBackend.h"
 
 #include <runtime/JSLock.h>
+
+#if ENABLE(INSPECTOR)
+#include "JSInspectorBackend.h"
+#endif
 
 using namespace JSC;
 
